Fixed buttons on mobile

--- a/ProjectWork/wwwroot/css/app.css
+++ b/ProjectWork/wwwroot/css/app.css
@@ -109,7 +109,7 @@ a, .btn-link {
     background-color: #cc0000 !important;
     color: white;
     padding: 15px 32px;
-    text-align: center;
+    text-align: center !important;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
